# libcppgenerate

./: CMakeLists.txt  Jenkinsfile  README.md  cppgenerate.pc.cmake  meson.build  meson_options.txt
cppgenerate/: argument.cpp  argument.h  class.cpp  class.h  codeblock.cpp  codeblock.h  constructor.cpp  constructor.h  cppgenerateutils.cpp  cppgenerateutils.h  enum.cpp  enum.h  membervariable.cpp  membervariable.h  method.cpp  method.h  printer.cpp  variable.cpp  variable.h
debian/: changelog  rules
examples/: CMakeLists.txt  cpp_class2.cpp  cpp_class3.cpp  examples-common.cmake
examples/cpp_class/: CMakeLists.txt  cpp_class.cpp  cpp_class1.cpp
tests/: CMakeLists.txt  class-with-method.cpp  cppgenerate-test-util.cmake  generate-class-with-default-values.cpp  generate-class-with-method.cpp  generate-class1.cpp  generate-imperative-math.cpp  generate-namespace-class.cpp  generator_util.h  generatorhelper.cpp  generatorhelper.h  meson.build  namespace-class-test.cpp  test1.cpp  test_enum.cpp  test_enum.h  test_main.cpp  testinterface.cpp  testinterface.h
tests/generate_enum1/: CMakeLists.txt  generate_enum1.cpp
tests/test_compile_enum/: CMakeLists.txt
tests2/: CMakeLists.txt  cppgenerate-test-util.cmake  generate-class1.cpp
